2009-11-20 John Wu <John.Wu at ACM.org>
	* src/colValues.cpp: an incorrect use of
	std::vector<std::string>::reference causes it to overwrite some
	values, which was the cause of a problem observed by Jan Hapke
	* examples/ibis.cpp: modify doAppend to check whether the second
	argument to -a is a directory name (to mimic a utility function
	written by Luca Deri)
	* examples/ibis.cpp: neglected to check the error code returned by
	query::orderby and query::limit, which is the source of a couple of
	problems reported by Jan Hapke.  Modify parseString to bypass the
	problems.
	* src/mensa.cpp: the function ibis::table::parseNames neglected
	the underscore '_'

2009-11-16 John Wu <John.Wu at ACM.org>
	* src/array_t.cpp: in function nosharing, change the test to use
	filename() != 0 instead of isFileMap() because named files are
	tracked by the file manager and may be shared with others later
	* src/bundle.cpp, src/colValues.cpp: add calls to nosharing before
	modifying the content of the bundle or column values (to address
	an issue raised by Alexandre Maurel)

2009-11-10 John Wu <John.Wu at ACM.org>
	* src/ixfuzz.cpp:51-52 remove statements that blindly refers to
	offset32
	* src/ixfuzz.cpp:485 neglected to test for size of coffset64
	* src/colValues.cpp: remove extra statement ++ j in various
	implementation of function segment to address the issue raised by
	Alexandre Maurel
	* src/ibis.h, src/index.h: remove warning about 32-bit bitmap
	offsets

2009-11-09 John Wu <John.Wu at ACM.org>
	* src/fileManager.h: add operator[] to storage object, make it
	possible to shorten st->begin()[6] to (*st)[6]
	* src/ibin.cpp:205-207 change sizeof(uint32_t) to (*st)[6]
	* src/ifade.cpp:77-85 change sizeof(int32_t) to (*st)[6]
	* src/ixzona.cpp: the constructor used offset32 blindly, change
	hit1+1 to hit1 in function evaluate

2009-11-06 John Wu <John.Wu at ACM.org>
	* src/ixambit.cpp, src/ixpack.cpp, src/ixpale.cpp, src/ixzone.cpp: